--- a/apps/cluster-1/develop/actions-runner-controller.yaml
+++ b/apps/cluster-1/develop/actions-runner-controller.yaml
@@ -12,7 +12,8 @@ spec:
       namespace: monitoring
   values:
     metrics:
-      serviceMonitor: true
+      serviceMonitor:
+        enable: true
       serviceMonitorLabels:
         release: kube-prometheus-stack
     actionsMetrics:
