--- a/apps/cluster-1/monitoring/kube-prometheus-stack.yaml
+++ b/apps/cluster-1/monitoring/kube-prometheus-stack.yaml
@@ -8,28 +8,7 @@ spec:
     defaultRules:
       create: false
     grafana:
-      defaultDashboardsEnabled: false
-      annotations:
-        operator.1password.io/item-path: "vaults/Kubernetes/items/grafana-secrets"
-        operator.1password.io/item-name: "grafana-secrets"
-      admin:
-        existingSecret: "grafana-secrets"
-        userKey: username
-        passwordKey: password
-      env:
-        GF_DATABASE_TYPE: postgres
-        GF_DATABASE_HOST: "grafana-postgresql.monitoring.svc.cluster.local:5432"
-        GF_DATABASE_NAME: grafana
-        GF_DATABASE_SSL_MODE: require
-      envValueFrom:
-        GF_DATABASE_USER:
-          secretKeyRef:
-            name: grafana.grafana-postgresql.credentials.postgresql.acid.zalan.do
-            key: username
-        GF_DATABASE_PASSWORD:
-          secretKeyRef:
-            name: grafana.grafana-postgresql.credentials.postgresql.acid.zalan.do
-            key: password
+      enabled: false
     prometheus:
       prometheusSpec:
         additionalScrapeConfigs:
