disable alertmanager on cluster-1

--- a/apps/cluster-1/monitoring/kube-prometheus-stack.yaml
+++ b/apps/cluster-1/monitoring/kube-prometheus-stack.yaml
@@ -7,6 +7,8 @@ spec:
   values:
     defaultRules:
       create: false
+    alertmanager:
+      enabled: false
     grafana:
       enabled: false
     prometheus:
