fix annotations on prometheus-stack

--- a/apps/cluster-1/monitoring/kube-prometheus-stack.yaml
+++ b/apps/cluster-1/monitoring/kube-prometheus-stack.yaml
@@ -13,10 +13,11 @@ spec:
       enabled: false
     prometheus:
       agentMode: true
-      annotations:
-        operator.1password.io/item-path: "vaults/Kubernetes/items/mimir-remote-write"
-        operator.1password.io/item-name: "mimir-remote-write"
       prometheusSpec:
+        podMetadata:
+          annotations:
+            operator.1password.io/item-path: "vaults/Kubernetes/items/mimir-remote-write"
+            operator.1password.io/item-name: "mimir-remote-write"
         remoteWrite:
           - url: https://mimir.damoun.cloud/api/v1/receive
             basicAuth:
