fix 1Password secrets for monioring namespace on cluster-1

--- a/apps/cluster-1/monitoring/kustomization.yaml
+++ b/apps/cluster-1/monitoring/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ../../base/monitoring/kube-prometheus-stack
   - ../../base/monitoring/speedtest-exporter
   - ../../base/monitoring/prometheus-blackbox-exporter
+  - secrets.yaml
 patchesStrategicMerge:
   - kube-prometheus-stack.yaml
   - prometheus-blackbox-exporter.yaml
