send metrics to Grafana Cloud with metrics filter

--- a/apps/cluster-1/monitoring/secrets.yaml
+++ b/apps/cluster-1/monitoring/secrets.yaml
@@ -6,3 +6,11 @@ metadata:
   namespace: monitoring
 spec:
   itemPath: "vaults/Kubernetes/items/mimir-remote-write"
+---
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
+  name: grafana-cloud-remote-write
+  namespace: monitoring
+spec:
+  itemPath: "vaults/Kubernetes/items/grafana-cloud-remote-write"
