deploy cloudnative-pg on cluster-1

--- a/crds/cluster-1/kustomization.yaml
+++ b/crds/cluster-1/kustomization.yaml
@@ -4,8 +4,8 @@ kind: Kustomization
 bases:
   - ../base/1password-connect
   - ../base/actions-runner-controller
-  - ../base/postgres-operator
-  - ../base/openebs-jiva/
+  - ../base/openebs-jiva
+  - ../base/cloudnative-pg
 resources:
   - ../base/prometheus-operator.yaml
   - ../base/mongo-operator.yaml
