--- a/apps/cluster-1/cnpg-system/kustomization.yaml
+++ b/apps/cluster-1/cnpg-system/kustomization.yaml
@@ -3,5 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
   - ../../base/cnpg-system/
-patches:
-  - path: values.yaml
+patchesStrategicMerge:
+  - values.yaml
