--- a/apps/cluster-1/cnpg-system/values.yaml
+++ b/apps/cluster-1/cnpg-system/values.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: cloudflare-pg
+  name: cloudnative-pg
   namespace: cnpg-system
 spec:
   dependsOn:
