disable mongodb operator & omada-controller

--- a/apps/cluster-1/kustomization.yaml
+++ b/apps/cluster-1/kustomization.yaml
@@ -9,6 +9,6 @@ resources:
   - ./monitoring/
   - ./develop/
   - ./database/
-  - ./openebs-jiva/
-  - ./network/
+#  - ./openebs-jiva/
+#  - ./network/
   - ./cnpg-system/
