set namespace on home-automation postgresql

--- a/apps/cluster-1/home-automation/postgresql.yaml
+++ b/apps/cluster-1/home-automation/postgresql.yaml
@@ -2,6 +2,7 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: postgresql
+  namespace: home-automation
 spec:
   instances: 2
   primaryUpdateStrategy: unsupervised
