--- a/apps/base/home-automation/home-assistant/helmrelease.yaml
+++ b/apps/base/home-automation/home-assistant/helmrelease.yaml
@@ -12,5 +12,6 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: damoun
+        namespace: shared
       version: 1.0.0
   interval: 1m0s
