--- a/apps/cluster-1/home-automation/home-assistant.yaml
+++ b/apps/cluster-1/home-automation/home-assistant.yaml
@@ -18,6 +18,6 @@ spec:
               trusted_proxies:
                 - "10.0.0.0/8"
     envFrom:
-      - secretKeyRef:
+      - secretRef:
           name: postgresql-app
           key: jdbc-uri
