--- a/apps/cluster-1/home-automation/home-assistant.yaml
+++ b/apps/cluster-1/home-automation/home-assistant.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: home-automation
 spec:
   values:
+    persistence:
+      enabled: true
     configmap:
       config:
         data:
