set persistence size & storageClass for home-automation

--- a/apps/cluster-1/home-automation/home-assistant.yaml
+++ b/apps/cluster-1/home-automation/home-assistant.yaml
@@ -8,6 +8,8 @@ spec:
   values:
     persistence:
       enabled: true
+      storageClass: openebs-jiva-csi-default
+      size: 10Gi
     configmap:
       config:
         data:
