--- a/kubernetes/home/crds.yaml
+++ b/kubernetes/home/crds.yaml
@@ -2,15 +2,18 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: ns
+  name: crds
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: ns
+    - name: repo
   interval: 1h
   retryInterval: 1m
   timeout: 5m
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./ns/cluster-1
+  path: ./kubernetes/home/crds/cluster-1
   prune: true
   wait: true
