--- a/kubernetes/home/flux/config/gotk-sync.yaml
+++ b/kubernetes/home/flux/config/gotk-sync.yaml
@@ -6,12 +6,13 @@ metadata:
   name: flux-system
   namespace: flux-system
 spec:
-  interval: 1m0s
+  interval: 30m
   ref:
     branch: main
-  secretRef:
-    name: flux-system
-  url: ssh://git@github.com/damoun/fleet-infra
+  url: https://github.com/damoun/fleet-infra.git
+  ignore: |
+    /*
+    !/kubernetes
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
@@ -19,7 +20,7 @@ metadata:
   name: flux-system
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 30m
   path: ./kubernetes/home/flux
   prune: true
   wait: false
