--- a/kubernetes/home/apps/1password/connect/ks.yaml
+++ b/kubernetes/home/apps/1password/connect/ks.yaml
@@ -2,16 +2,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: renovate
+  name: connect
   namespace: flux-system
 spec:
-  targetNamespace: develop
+  targetNamespace: 1password
   interval: 10m
-  path: "./kubernetes/home/apps/develop/renovate/app"
+  path: "./kubernetes/home/apps/1password/connect/app"
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
   wait: true
-  dependsOn:
-    - name: connect
