--- a/kubernetes/home/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/home/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -15,6 +15,13 @@ spec:
         namespace: flux-system
       version: 54.2.2
   values:
+    prometheus:
+      prometheusSpec:
+        ruleSelectorNilUsesHelmValues: false
+        scrapeConfigSelectorNilUsesHelmValues: false
+        podMonitorSelectorNilUsesHelmValues: false
+        serviceMonitorSelectorNilUsesHelmValues: false
+        probeSelectorNilUsesHelmValues: false
     defaultRules:
       create: false
     alertmanager:
