deploy tf-controller to flux-system

--- a/kubernetes/home/flux/config/gotk-sync.yaml
+++ b/kubernetes/home/flux/config/gotk-sync.yaml
@@ -13,6 +13,7 @@ spec:
   ignore: |
     /*
     !/kubernetes
+    !/infrastructure/terraform
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
