add tfe_token as secret to tfe terraform controller

--- a/kubernetes/home/apps/flux-system/tf-controller/terraform/secrets.yaml
+++ b/kubernetes/home/apps/flux-system/tf-controller/terraform/secrets.yaml
@@ -2,6 +2,14 @@
 apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
+  name: tfe-token
+  namespace: develop
+spec:
+  itemPath: "vaults/Kubernetes/items/tfe-token"
+---
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
   name: cloudflare-token
   namespace: develop
 spec:
