--- a/kubernetes/home/apps/flux-system/tf-controller/terraform/tfe.yaml
+++ b/kubernetes/home/apps/flux-system/tf-controller/terraform/tfe.yaml
@@ -10,3 +10,11 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  runnerPodTemplate:
+    spec:
+      env:
+        - name: TF_VAR_tfe_token
+          valueFrom:
+            secretKeyRef:
+              name: tfe-token
+              key: token
