configure tfe on tf-controller

--- a/kubernetes/home/apps/flux-system/tf-controller/terraform/secrets.yaml
+++ b/kubernetes/home/apps/flux-system/tf-controller/terraform/secrets.yaml
@@ -2,10 +2,10 @@
 apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
-  name: tfe-token
+  name: tfe-cli-config
   namespace: develop
 spec:
-  itemPath: "vaults/Kubernetes/items/tfe-token"
+  itemPath: "vaults/Kubernetes/items/tfe-cli-config"
 ---
 apiVersion: onepassword.com/v1
 kind: OnePasswordItem
