--- a/kubernetes/home/apps/flux-system/tf-controller/terraform/cloudflare.yaml
+++ b/kubernetes/home/apps/flux-system/tf-controller/terraform/cloudflare.yaml
@@ -10,6 +10,10 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  backendConfig:
+    disable: true
+  cliConfigSecretRef:
+    name: tfe-cli-config
   runnerPodTemplate:
     spec:
       env:
