--- a/kubernetes/home/apps/kube-system/kustomization.yaml
+++ b/kubernetes/home/apps/kube-system/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kube-system
 resources:
+  - ./cilium
   - github.com/kubernetes-sigs/descheduler/kubernetes/deployment?ref=v0.28.0
