--- a/kubernetes/home/apps/storage/openebs-jiva/helmrelease.yaml
+++ b/kubernetes/home/apps/storage/openebs-jiva/helmrelease.yaml
@@ -39,3 +39,19 @@ spec:
             target:
               kind: ConfigMap
               name: openebs-jiva-csi-iscsiadm
+          - patch: |
+              - op: replace
+                path: "/spec/replica/affinity"
+                value: |
+                  podAffinity:
+                    requiredDuringSchedulingIgnoredDuringExecution:
+                      - labelSelector:
+                          matchExpressions:
+                            - key: openebs.io/data-plane
+                              operator: In
+                              values:
+                                - "true"
+                        topologyKey: kubernetes.io/hostname
+            target:
+              kind: JivaVolumePolicy
+              name: openebs-jiva-default-policy
