--- a/kubernetes/home/apps/home-automation/home-assistant/ks.yaml
+++ b/kubernetes/home/apps/home-automation/home-assistant/ks.yaml
@@ -14,4 +14,6 @@ spec:
     name: flux-system
   wait: true
   dependsOn:
+    - name: openebs-jiva-app
+    - name: openebs-jiva-config
     - name: cloudnative-pg
