--- a/kubernetes/home/apps/storage/openebs-jiva/app/helmrelease.yaml
+++ b/kubernetes/home/apps/storage/openebs-jiva/app/helmrelease.yaml
@@ -15,6 +15,8 @@ spec:
         namespace: flux-system
       version: 3.5.1
   values:
+    defaultPolicy:
+      enabled: false
     csiNode:
       nodeSelector:
         openebs.io/data-plane: "true"
@@ -39,19 +41,3 @@ spec:
             target:
               kind: ConfigMap
               name: openebs-jiva-csi-iscsiadm
-          - patch: |
-              - op: replace
-                path: "/spec/replica/affinity"
-                value: |
-                  podAffinity:
-                    requiredDuringSchedulingIgnoredDuringExecution:
-                      - labelSelector:
-                          matchExpressions:
-                            - key: openebs.io/data-plane
-                              operator: In
-                              values:
-                                - "true"
-                        topologyKey: kubernetes.io/hostname
-            target:
-              kind: JivaVolumePolicy
-              name: openebs-jiva-default-policy
