--- a/kubernetes/home/apps/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/home/apps/home-automation/home-assistant/app/helmrelease.yaml
@@ -18,10 +18,10 @@ spec:
         namespace: flux-system
       version: 1.1.0
   values:
-    persistence:
-      enabled: true
-      storageClass: openebs-jiva-csi-default
-      size: 10Gi
+#    persistence:
+#      enabled: true
+#      storageClass: openebs-jiva-csi-default
+#      size: 10Gi
     configmap:
       config:
         data:
