add dependency on prometheus operator for tf-controller

--- a/kubernetes/home/apps/flux-system/tf-controller/app/helmrelease.yaml
+++ b/kubernetes/home/apps/flux-system/tf-controller/app/helmrelease.yaml
@@ -5,6 +5,9 @@ metadata:
   name: tf-controller
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: kube-prometheus-stack
+      namespace: monitoring
   interval: 30m
   chart:
     spec:
