deploy ingress-nginx

--- a/kubernetes/home/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/home/flux/repositories/helm/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ./cloudnative-pg.yaml
   - ./damoun.yaml
   - ./grafana.yaml
+  - ./ingress-nginx.yaml
   - ./jetstack.yaml
   - ./mongodb.yaml
   - ./openebs-jiva.yaml
