--- a/kubernetes/home/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/home/apps/kube-system/cilium/app/helmrelease.yaml
@@ -28,6 +28,24 @@ spec:
     ingressController:
       enabled: false
       loadbalancerMode: shared
+
+    hubble:
+      serviceMonitor:
+        enabled: true
+
+    relay:
+      prometheus:
+        serviceMonitor:
+          enabled: true
+
+    k8sServiceHost: localhost
+    k8sServicePort: 7445
+
+    kubeProxyReplacement: true
+    kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
+
+    localRedirectPolicy: true
+    rollOutCiliumPods: true
     
     bgp:
       enabled: false
@@ -64,6 +82,8 @@ spec:
           - NET_ADMIN
           - SYS_ADMIN
           - SYS_RESOURCE
+
+    tunnel: disabled
 
     cgroup:
       autoMount:
