--- a/kubernetes/home/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/home/apps/kube-system/cilium/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
         serviceMonitor:
           enabled: true
 
-    k8sServiceHost: localhost
+    k8sServiceHost: 192.168.2.141
     k8sServicePort: 7445
 
     kubeProxyReplacement: true
