disable kube-proxy on control plane

--- a/infrastructure/talos/home/talconfig.yaml
+++ b/infrastructure/talos/home/talconfig.yaml
@@ -199,6 +199,11 @@ nodes:
 
 controlPlane:
   patches:
+    # Disable kube-proxy
+    - |-
+      cluster:
+        proxy:
+          disabled: true
     # Enable KubePrism
     - |-
       machine:
