--- a/kubernetes/home/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/home/apps/kube-system/cilium/app/helmrelease.yaml
@@ -16,11 +16,54 @@ spec:
       version: 1.14.4
   interval: 30m
   values:
-    prometheus:
-      serviceMonitor:
-        enabled: true
-
-    l7Proxy: true
+    autoDirectNodeRoutes: true
+    bandwidthManager:
+      enabled: true
+      bbr: true
+    bpf:
+      masquerade: true
+    bgp:
+      enabled: false
+    cluster:
+      name: home
+      id: 1
+    containerRuntime:
+      integration: containerd
+    endpointRoutes:
+      enabled: true
+    hubble:
+      enabled: true
+      metrics:
+        enabled:
+          - dns:query
+          - drop
+          - tcp
+          - flow
+          - port-distribution
+          - icmp
+          - http
+        serviceMonitor:
+          enabled: true
+        dashboards:
+          enabled: true
+          annotations:
+            grafana_folder: Cilium
+    relay:
+      enabled: true
+      rollOutPods: true
+      prometheus:
+        serviceMonitor:
+          enabled: true
+    ui:
+      enabled: true
+      rollOutPods: true
+    ipam:
+      mode: kubernetes
+    ipv4NativeRoutingCIDR: 10.244.0.0/16
+    k8sServiceHost: 192.168.2.141
+    k8sServicePort: 6443
+    kubeProxyReplacement: true
+    kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
     l2announcements:
       enabled: true
       leaseDuration: 120s
@@ -29,68 +72,27 @@ spec:
     loadBalancer:
       algorithm: maglev
       mode: dsr
-
-    ingressController:
-      enabled: false
-      loadbalancerMode: shared
-
-    hubble:
-      serviceMonitor:
-        enabled: true
-
-    relay:
+    localRedirectPolicy: true
+    operator:
+      rollOutPods: true
       prometheus:
+        enabled: true
         serviceMonitor:
           enabled: true
-
-    k8sServiceHost: 192.168.2.141
-    k8sServicePort: 6443
-
-    kubeProxyReplacement: true
-    kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
-
-    localRedirectPolicy: true
-    rollOutCiliumPods: true
-    
-    bgp:
-      enabled: false
-      announce:
-        loadbalancerIP: true
-        podCIDR: false
-
-    bgpControlPlane:
+      dashboards:
+        enabled: true
+        annotations:
+          grafana_folder: Cilium
+    prometheus:
       enabled: true
-
-    cluster:
-      name: home
-      id: 1
-
-    ipam:
-      mode: "kubernetes"
-    ipv4NativeRoutingCIDR: 10.244.0.0/16
-
+      serviceMonitor:
+        enabled: true
+        trustCRDsExist: true
+    dashboards:
+      enabled: true
+      annotations:
+        grafana_folder: Cilium
+    rollOutCiliumPods: true
     securityContext:
-      capabilities:
-        ciliumAgent:
-          - CHOWN
-          - KILL
-          - NET_ADMIN
-          - NET_RAW
-          - IPC_LOCK
-          - SYS_ADMIN
-          - SYS_RESOURCE
-          - DAC_OVERRIDE
-          - FOWNER
-          - SETGID
-          - SETUID
-        cleanCiliumState:
-          - NET_ADMIN
-          - SYS_ADMIN
-          - SYS_RESOURCE
-
+      privileged: true
     tunnel: disabled
-
-    cgroup:
-      autoMount:
-        enabled: false
-      hostRoot: /sys/fs/cgroup
