--- a/kubernetes/home/apps/kube-system/cilium/config/ciliuml2announcementpolicy.yaml
+++ b/kubernetes/home/apps/kube-system/cilium/config/ciliuml2announcementpolicy.yaml
@@ -6,8 +6,9 @@ metadata:
   name: policy
 spec:
   loadBalancerIPs: true
+  externalIPs: true
   interfaces:
-    - ^eth*
+    - ^eno*
   nodeSelector:
     matchLabels:
       kubernetes.io/os: linux
