--- a/kubernetes/home/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/home/flux/repositories/helm/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: flux-system
 resources:
   - ./1password.yaml
   - ./actions-runner-controller.yaml
+  - ./agones.yaml
   - ./cilium.yaml
   - ./cloudnative-pg.yaml
   - ./damoun.yaml
