--- a/kubernetes/home/flux/repositories/git/shulker.yaml
+++ b/kubernetes/home/flux/repositories/git/shulker.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 30m
   url: https://github.com/jeremylvln/Shulker
   ref:
-    branch: v0.4.0
+    tag: v0.4.0
   ignore: |
     # exclude all
     /*
