fix helm chart path for shulker

--- a/kubernetes/home/apps/game/agones/app/helmrelease.yaml
+++ b/kubernetes/home/apps/game/agones/app/helmrelease.yaml
@@ -32,4 +32,6 @@ spec:
         install: true
         service:
           serviceType: ClusterIP
+      extentions:
+        replicas: 1
   interval: 1m0s
