add redis-operator form spotahome

--- a/kubernetes/home/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/home/flux/repositories/helm/kustomization.yaml
@@ -16,4 +16,5 @@ resources:
   - ./openebs-jiva.yaml
   - ./prometheus-community.yaml
   - ./renovate.yaml
+  - ./spotahome-redis-operator.yaml
   - ./tf-controller.yaml
