--- a/kubernetes/home/apps/game/agones/app/helmrelease.yaml
+++ b/kubernetes/home/apps/game/agones/app/helmrelease.yaml
@@ -27,6 +27,10 @@ spec:
         replicas: 1
       ping:
         replicas: 1
+        http:
+          serviceType: ClusterIP
+        udp:
+          serviceType: ClusterIP
       allocator:
         replicas: 1
         install: true
