--- a/kubernetes/home/apps/database/redis-operator/app/helmrelease.yaml
+++ b/kubernetes/home/apps/database/redis-operator/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: redis-controller
+  name: redis-operator
   namespace: database
 spec:
   dependsOn:
@@ -10,7 +10,7 @@ spec:
       namespace: monitoring
   chart:
     spec:
-      chart: redis-controller
+      chart: redis-operator
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
