--- a/kubernetes/home/apps/database/redis-operator/ks.yaml
+++ b/kubernetes/home/apps/database/redis-operator/ks.yaml
@@ -2,12 +2,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: redis-controller
+  name: redis-operator
   namespace: flux-system
 spec:
   targetNamespace: database
   interval: 10m
-  path: "./kubernetes/home/apps/database/redis-controller/app"
+  path: "./kubernetes/home/apps/database/redis-operator/app"
   prune: true
   sourceRef:
     kind: GitRepository
