deploy code-server from coder

--- a/kubernetes/home/apps/develop/kustomization.yaml
+++ b/kubernetes/home/apps/develop/kustomization.yaml
@@ -5,4 +5,5 @@ resources:
   - namespace.yaml
   - ./renovate/ks.yaml
   - ./actions-runner-controller
+  - ./code-server
 #  - actions-runners.yaml
