deploy minecraft server
Signed-off-by: Damien Plénard <damien@plenard.me>

--- a/kubernetes/home/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/home/flux/repositories/helm/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - ./damoun.yaml
   - ./grafana.yaml
   - ./ingress-nginx.yaml
+  - ./itzg-minecraft.yaml
   - ./jetstack.yaml
   - ./mongodb.yaml
   - ./openebs-jiva.yaml
