--- a/kubernetes/home/apps/game/minecraft/helmrelease.yaml
+++ b/kubernetes/home/apps/game/minecraft/helmrelease.yaml
@@ -22,6 +22,7 @@ spec:
       paperDownloadUrl: https://api.papermc.io/v2/projects/paper/versions/1.20.2/builds/318/downloads/paper-1.20.2-318.jar
       ops: "damoun"
       motd: "\u00A74\u00A7k-\u00A7r \u00A73InHouseRealms\u00A7f - A Kubernetes Minecraft server running at Home"
+      serviceType: "LoadBalancer"
       rcon:
         enabled: true
         withGeneratedPassword: true
