--- a/kubernetes/home/apps/home-automation/mosquitto/helmrelease.yaml
+++ b/kubernetes/home/apps/home-automation/mosquitto/helmrelease.yaml
@@ -64,6 +64,8 @@ spec:
       main:
         type: LoadBalancer
         externalTrafficPolicy: Local
+        annotations:
+          io.cilium/lb-ipam-ips: "192.168.2.243"
         ports:
           http:
             enabled: false
