--- a/kubernetes/home/apps/home-automation/mosquitto/helmrelease.yaml
+++ b/kubernetes/home/apps/home-automation/mosquitto/helmrelease.yaml
@@ -63,7 +63,7 @@ spec:
     service:
       main:
         type: LoadBalancer
-        externalTrafficPolicy: Local
+        externalTrafficPolicy: Cluster
         annotations:
           io.cilium/lb-ipam-ips: "192.168.2.243"
         ports:
