deploy selenium-grid with autoscaling

--- a/kubernetes/home/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/home/flux/repositories/helm/kustomization.yaml
@@ -18,4 +18,5 @@ resources:
   - ./ot-container-kit.yaml
   - ./prometheus-community.yaml
   - ./renovate.yaml
+  - ./selenium.yaml
   - ./tf-controller.yaml
