--- a/kubernetes/home/apps/monitoring/changedetection/helmrelease.yaml
+++ b/kubernetes/home/apps/monitoring/changedetection/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
             env:
               TZ: Europe/Amsterdam
               HIDE_REFERER: "true"
-              WEBDRIVER_URL: http://selenium-router:4444/wd/hub
+              WEBDRIVER_URL: http://selenium-router:4444
               PORT: 5000
               PUID: 568
               PGID: 568
