fix autoscaling on selenium

--- a/kubernetes/home/apps/monitoring/selenium-grid/helmrelease.yaml
+++ b/kubernetes/home/apps/monitoring/selenium-grid/helmrelease.yaml
@@ -17,8 +17,8 @@ spec:
   values:
     isolateComponents: true
     autoscaling:
-      enabling: true
-    basicAuth.:
+      enabled: true
+    basicAuth:
       enabled: false
     ingress:
       enabled: false
