--- a/kubernetes/home/apps/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/home/apps/home-automation/home-assistant/app/helmrelease.yaml
@@ -53,9 +53,13 @@ spec:
 
     service:
       main:
+        type: LoadBalancer
+        externalTrafficPolicy: Cluster
         ports:
           http:
             port: 8123
+          homekit:
+            port: 21063
 
     ingress:
       main:
