enable nfs persistence for qbittorrent

--- a/kubernetes/home/apps/download/qbittorrent/helmrelease.yaml
+++ b/kubernetes/home/apps/download/qbittorrent/helmrelease.yaml
@@ -127,6 +127,7 @@ spec:
             main:
               - path: /config
       media:
+        enabled: true
         type: nfs
         server: nas.home.damoun.cloud
         path: /mnt/pool1/download
