fix qbittorrent url on qbtools cronjob

--- a/kubernetes/home/apps/download/qbittorrent/tools/tags/helmrelease.yaml
+++ b/kubernetes/home/apps/download/qbittorrent/tools/tags/helmrelease.yaml
@@ -46,7 +46,7 @@ spec:
               - --sites
               - --unregistered
               - --server
-              - qbittorrent.download.svc.cluster.local
+              - qbittorrent
               - --port
               - "8080"
               - --config
