--- a/kubernetes/home/apps/download/qbittorrent/tools/prune/helmrelease.yaml
+++ b/kubernetes/home/apps/download/qbittorrent/tools/prune/helmrelease.yaml
@@ -45,7 +45,7 @@ spec:
               - unregistered
               - --dry-run
               - --server
-              - qbittorrent.downloads.svc.cluster.local
+              - qbittorrent
               - --port
               - "8080"
             resources:
