--- a/kubernetes/home/apps/download/qbittorrent/tools/reannounce/helmrelease.yaml
+++ b/kubernetes/home/apps/download/qbittorrent/tools/reannounce/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
               - reannounce
               - --process-seeding
               - -s
-              - qbittorrent.downloads.svc.cluster.local
+              - qbittorrent
               - -p
               - "8080"
             resources:
