add yggtorrent tracker to qbtools

--- a/kubernetes/home/apps/download/qbittorrent/tools/config/config.yaml
+++ b/kubernetes/home/apps/download/qbittorrent/tools/config/config.yaml
@@ -129,3 +129,8 @@ trackers:
     urls: ["uhdbits.org"]
     required_seed_ratio: 1.05
     required_seed_days: 7.5
+
+  - name: yggtorrent
+    urls: ["connect.gopeers.cc"]
+    required_seed_ratio: 2
+    required_seed_days: 0
