--- a/kubernetes/home/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/home/flux/repositories/helm/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ./bjw-s.yaml
   - ./cilium.yaml
   - ./cloudnative-pg.yaml
+  - ./clusterplex.yaml
   - ./damoun.yaml
   - ./grafana.yaml
   - ./ingress-nginx.yaml
