--- a/kubernetes/home/apps/media/clusterplex/helmrelease.yaml
+++ b/kubernetes/home/apps/media/clusterplex/helmrelease.yaml
@@ -8,49 +8,181 @@ spec:
   interval: 30m
   chart:
     spec:
-      chart: clusterplex
-      version: 1.1.3
+      chart: app-template
+      version: 2.4.0
       interval: 30m
       sourceRef:
         kind: HelmRepository
-        name: clusterplex
+        name: bjw-s
         namespace: flux-system
   values:
-    global:
-      timezone: Europe/Amsterdam
-      PGID: 65542
-      PUID: 65542
-      sharedStorage:
-        transcode:
-          enabled: true
-          type: nfs
-          server: nas.home.damoun.cloud
-          path: /mnt/pool1/kubernetes/transcoding
-        media:
-          enabled: true
-          type: nfs
-          server: nas.home.damoun.cloud
-          path: /mnt/pool1/video
-    pms:
+    defaultPodOptions:
       nodeSelector:
         openebs.io/data-plane: "true"
-      config:
-        ingressConfig:
-          enabled: true
-          ingressClassName: "nginx"
-          hosts:
-            - host: plex.home.damoun.cloud
-              paths:
-                - path: /
-                  pathType: Prefix
-      configVolume:
+    controllers:
+      main:
+        pod:
+          securityContext:
+            fsGroup: 568
+            fsGroupChangePolicy: "OnRootMismatch"
+            supplementalGroups:
+              - 65542
+        containers:
+          main:
+            nameOverride: "orchestrator"
+            image:
+              repository: ghcr.io/pabloromeo/clusterplex_orchestrator
+              tag: 1.4.8
+            env:
+              TZ: Europe/Amsterdam
+              PGID: '65542'
+              PUID: '568'
+              LISTENING_PORT: "3500"
+              WORKER_SELECTION_STRATEGY: "LOAD_RANK"
+            resources:
+              requests:
+                cpu: 200m
+                memory: 64Mi
+              limits:
+                cpu: 500m
+                memory: 128Mi
+      pms:
+        pod:
+          annotations:
+            operator.1password.io/item-path: "vaults/Kubernetes/items/plex-secret"
+            operator.1password.io/item-name: "plex-secret"
+          securityContext:
+            fsGroup: 568
+            fsGroupChangePolicy: "OnRootMismatch"
+            supplementalGroups:
+              - 65542
+        containers:
+          main:
+            image:
+              repository: ghcr.io/pabloromeo/clusterplex_pms
+              tag: 1.4.8
+            env:
+              TZ: Europe/Amsterdam
+              PGID: '65542'
+              PUID: '568'
+              VERSION: docker
+              DOCKER_MODS: 'ghcr.io/pabloromeo/clusterplex_dockermod:1.4.8'
+              ORCHESTRATOR_URL: 'http://{{ .Release.Name }}:3500'
+              PMS_SERVICE: '{{ .Release.Name }}-pms'
+              PMS_PORT: '32400'
+              TRANSCODER_VERBOSE: '1'
+              TRANSCODE_OPERATING_MODE: 'both'
+              LOCAL_RELAY_ENABLED: '1'
+              LOCAL_RELAY_PORT: '32499'
+            envFrom:
+              - secretRef:
+                  name: plex-secret
+            resources:
+              requests:
+                cpu: 2000m
+                memory: 2Gi
+              limits:
+                cpu: 4000m
+                memory: 4Gi
+      worker:
+        type: statefulset
+        replicas: 2
+        pod:
+          securityContext:
+            fsGroup: 568
+            fsGroupChangePolicy: "OnRootMismatch"
+            supplementalGroups:
+              - 65542
+        containers:
+          main:
+            image:
+              repository: ghcr.io/pabloromeo/clusterplex_worker
+              tag: 1.4.8
+            env:
+              TZ: Europe/Amsterdam
+              PGID: '65542'
+              PUID: '568'
+              VERSION: docker
+              DOCKER_MODS: 'ghcr.io/pabloromeo/clusterplex_worker_dockermod:1.4.8'
+              ORCHESTRATOR_URL: 'http://{{ .Release.Name }}:3500'
+              LISTENING_PORT: '3501'
+              STAT_CPU_INTERVAL: '10000'
+              EAE_SUPPORT: '1'
+            resources:
+              requests:
+                cpu: 2000m
+                memory: 3Gi
+              limits:
+                cpu: 4000m
+                memory: 6Gi
+    service:
+      main:
+        ports:
+          http:
+            port: 3500
+      pms:
+        controller: pms
+        ports:
+          http:
+            port: 32400
+          relay:
+            port: 32499
+      worker:
+        controller: worker
+        ports:
+          http:
+            port: 3501
+    ingress:
+      pms:
+        enabled: true
+        className: "nginx"
+        hosts:
+          - host: "plex.home.damoun.cloud"
+            paths:
+              - path: /
+                service:
+                  name: pms
+                  port: http
+    persistence:
+      config-pms:
         enabled: true
         accessMode: ReadWriteOnce
         storageClass: openebs-jiva-csi-default
-        size: 5Gi
-    worker:
-      nodeSelector:
-        openebs.io/data-plane: "true"
-      codecVolumes:
+        size: 25Gi
+        advancedMounts:
+          pms:
+            main:
+              - path: /config
+      codecs:
         enabled: true
+        accessMode: ReadWriteOnce
         storageClass: openebs-jiva-csi-default
+        size: 1Gi
+        advancedMounts:
+          worker:
+            main:
+              - path: /codecs
+      transcode:
+        enabled: true
+        type: nfs
+        server: nas.home.damoun.cloud
+        path: /mnt/pool1/kubernetes/transcoding
+        advancedMounts:
+          worker:
+            main:
+              - path: /transcode
+          pms:
+            main:
+              - path: /transcode
+      media:
+        enabled: true
+        type: nfs
+        server: nas.home.damoun.cloud
+        path: /mnt/pool1/video
+        advancedMounts:
+          worker:
+            main:
+              - path: /media
+          pms:
+            main:
+              - path: /media
