update yggtorrent tracker urls

--- a/kubernetes/home/apps/download/qbittorrent/tools/config/config.yaml
+++ b/kubernetes/home/apps/download/qbittorrent/tools/config/config.yaml
@@ -131,6 +131,6 @@ trackers:
     required_seed_days: 7.5
 
   - name: yggtorrent
-    urls: ["connect.gopeers.cc"]
-    required_seed_ratio: 2
+    urls: ["connect.drago-server.org", "tracker.loadpeers.org"]
+    required_seed_ratio: 1.05
     required_seed_days: 0
