--- a/infrastructure/talos/home/talconfig.yaml
+++ b/infrastructure/talos/home/talconfig.yaml
@@ -1,6 +1,6 @@
 ---
 clusterName: home
-talosVersion: v1.5.5
+talosVersion: v1.6.7
 kubernetesVersion: v1.28.3
 endpoint: https://192.168.2.141:6443
 allowSchedulingOnMasters: true
@@ -10,8 +10,8 @@ clusterPodNets:
   - 10.244.0.0/16
 clusterSvcNets:
   - 10.96.0.0/12
-cniConfig:
-  name: none
+#cniConfig:
+#  name: none
 nodes:
   - hostname: control-plane-vdcj
     ipAddress: 192.168.2.141
@@ -197,17 +197,17 @@ nodes:
       - 8.8.8.8
       - 8.8.4.4
 
-controlPlane:
-  patches:
-    # Disable kube-proxy
-    - |-
-      cluster:
-        proxy:
-          disabled: true
-    # Enable KubePrism
-    - |-
-      machine:
-        features:
-          kubePrism:
-            enabled: true
-            port: 7445
+#controlPlane:
+#  patches:
+#    # Disable kube-proxy
+#    - |-
+#      cluster:
+#        proxy:
+#          disabled: true
+#    # Enable KubePrism
+#    - |-
+#      machine:
+#        features:
+#          kubePrism:
+#            enabled: true
+#            port: 7445
