--- a/kubernetes/home/apps/kube-system/kustomization.yaml
+++ b/kubernetes/home/apps/kube-system/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./cilium/ks.yaml
+#  - ./cilium/ks.yaml
   - github.com/kubernetes-sigs/descheduler/kubernetes/deployment?ref=v0.29.0
