add depdency on openebs-jiva on all *arr apps

--- a/kubernetes/home/apps/download/recyclarr/helmrelease.yaml
+++ b/kubernetes/home/apps/download/recyclarr/helmrelease.yaml
@@ -5,6 +5,9 @@ metadata:
   name: recyclarr
   namespace: download
 spec:
+  dependsOn:
+    - name: openebs-jiva
+      namespace: storage
   interval: 30m
   chart:
     spec:
