--- a/kubernetes/home/apps/download/radarr/helmrelease.yaml
+++ b/kubernetes/home/apps/download/radarr/helmrelease.yaml
@@ -5,6 +5,9 @@ metadata:
   name: radarr
   namespace: download
 spec:
+  dependsOn:
+    - name: openebs-jiva
+      namespace: storage
   interval: 30m
   chart:
     spec:
